--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "@playwright/test": "^1.58.0",
     "@types/node": "^25.1.0"
   },
-  "scripts": {}
+  "scripts": {    
+    "test": "playwright test",
+    "test:headed": "playwright test --headed",
+    "report": "playwright show-report"
+  }
 }
